@@ -1,22 +1,21 @@
 package fr.gouv.monprojetsup.suggestions.algos;
 
 import com.google.gson.Gson;
+import fr.gouv.monprojetsup.data.Helpers;
+import fr.gouv.monprojetsup.data.dto.GetExplanationsAndExamplesServiceDTO;
+import fr.gouv.monprojetsup.common.tools.ConcurrentBoundedMapQueue;
+import fr.gouv.monprojetsup.data.dto.ProfileDTO;
+import fr.gouv.monprojetsup.data.dto.SuggestionDTO;
 import fr.gouv.monprojetsup.data.Constants;
 import fr.gouv.monprojetsup.data.ServerData;
 import fr.gouv.monprojetsup.data.model.Edges;
 import fr.gouv.monprojetsup.data.model.Path;
-import fr.gouv.monprojetsup.data.model.cities.CitiesBack;
-import fr.gouv.monprojetsup.data.model.cities.Coords;
-import fr.gouv.monprojetsup.data.model.cities.Distance;
+import fr.gouv.monprojetsup.data.distances.Distances;
 import fr.gouv.monprojetsup.data.model.descriptifs.Descriptifs;
-import fr.gouv.monprojetsup.data.model.formations.Formation;
 import fr.gouv.monprojetsup.data.model.stats.PsupStatistiques;
 import fr.gouv.monprojetsup.data.update.UpdateFrontData;
-import fr.gouv.monprojetsup.common.dto.ProfileDTO;
 import fr.gouv.monprojetsup.suggestions.server.Log;
-import fr.parcoursup.carte.algos.tools.Paire;
 import lombok.Getter;
-import lombok.val;
 import org.apache.commons.lang3.tuple.Pair;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -31,7 +30,7 @@ import static fr.gouv.monprojetsup.data.Constants.*;
 import static fr.gouv.monprojetsup.data.ServerData.*;
 import static fr.gouv.monprojetsup.data.update.onisep.OnisepData.EDGES_INTERETS_METIERS_WEIGHT;
 import static fr.gouv.monprojetsup.suggestions.algos.Config.NO_MATCH_SCORE;
-import static java.lang.Math.signum;
+import static java.lang.Math.*;
 
 public class AlgoSuggestions {
 
@@ -43,42 +42,42 @@ public class AlgoSuggestions {
     /* les relations entre les différents labels dans les nomenclatures */
     public static final Edges edgesLabels = new Edges();
     protected static final Set<String> apprentissage = new HashSet<>();
-    private static final int MAX_LENGTH_FOR_SUGGESTIONS = 3;
+    static final int MAX_LENGTH_FOR_SUGGESTIONS = 3;
 
     //because LAS informatique is a plus but not the canonical path to working as a surgeon for example
     private static final double LAX_TO_PASS_METIERS_PENALTY = 0.25;
+    private static final String NOTHING_PERSONAL = "Nothing personal in the profile, serving nothing.";
 
-    private static PsupStatistiques.LASCorrespondance lasCorrespondance;
+    protected static PsupStatistiques.LASCorrespondance lasCorrespondance;
 
     @Getter
     protected static final Set<String> relatedToHealth = new HashSet<>();
 
-    private static AtomicInteger counter = new AtomicInteger(0);
+    private static final AtomicInteger counter = new AtomicInteger(0);
 
     /**
-     * Get suggestions associated to a profile.
+     * Get details associated to a profile.
      * Side effect: inject explanations into personal choices personal
      *
      * @param pf  the profile
      * @param cfg the config used, essentially weights on criteria
-     * @return the suggestions
+     * @return the details
      */
     public static @NotNull Suggestions getSuggestions(
             @Nullable ProfileDTO pf,
             @NotNull Config cfg
     ) {
         counter.getAndIncrement();
-        //LOGGER.info("Serving suggestions for " + pf);
         //rien de spécifique --> on ne suggère rien pour éviter les trucs généralistes
         if(pf == null || containsNothingPersonal(pf)) {
-            LOGGER.info("Nothing personal in the profile, serving nothing.");
+            LOGGER.info(NOTHING_PERSONAL);
             return new Suggestions();
         }
-        //computing scores of all alive filieres
+        //computing interests of all alive filieres
         AffinityEvaluator affinityEvaluator = new AffinityEvaluator(pf, cfg);
         Map<String, Double> filieresScores = new HashMap<>();
 
-        /* première passe pour calculer les scores */
+        /* première passe pour calculer les interests */
         backPsupData.filActives().forEach(gFlCod -> {
             String fl = FILIERE_PREFIX + gFlCod;
             // the core computation
@@ -90,7 +89,7 @@ public class AlgoSuggestions {
         });
 
         if(filieresScores.isEmpty()) {
-            Log.logTrace(AlgoSuggestions.class.getSimpleName(), "Tous les scores des filières à 0 sur un un profil contenant des éléments personnesl"
+            Log.logTrace(AlgoSuggestions.class.getSimpleName(), "Tous les interests des filières à 0 sur un un profil contenant des éléments personnesl"
                     + new Gson().toJson(pf.cleanupDates())
             );
         }
@@ -102,7 +101,7 @@ public class AlgoSuggestions {
         List<Suggestion> filiereSuggs = getFilieresSuggestions(filieresScores, cfg);
 
         if(filiereSuggs.isEmpty()  && !filieresScores.isEmpty()) {
-            Log.logBackError("Pas de suggestion de filiere sur un un profil contenant des éléments personnesl et des scores filieres non vide"
+            Log.logBackError("Pas de suggestion de filiere sur un un profil contenant des éléments personnesl et des interests filieres non vide"
                     + new Gson().toJson(pf.cleanupDates())
             );
         }
@@ -113,13 +112,12 @@ public class AlgoSuggestions {
                 .getCloseTagsSuggestionsOrderedByIncreasingDistance(
                         MAX_LENGTH_FOR_SUGGESTIONS,
                         false,
-                        SEC_ACT_PREFIX_IN_GRAPH,
                         cfg.maxNbSuggestions()
                 );
         if(metiersSuggestions.isEmpty()) {
-            Log.logTrace(AlgoSuggestions.class.getSimpleName(), "Tous les scores des metiers à 0 sur le profil " + new Gson().toJson(pf.cleanupDates()));
+            Log.logTrace(AlgoSuggestions.class.getSimpleName(), "Tous les interests des metiers à 0 sur le profil " + new Gson().toJson(pf.cleanupDates()));
         }
-        //LOGGER.info(metiersSuggestions.size() + " metiers suggestions");
+        //LOGGER.info(metiersSuggestions.size() + " metiers details");
 
         List<Suggestion> answer = new ArrayList<>(
                 filiereSuggs.stream()
@@ -136,7 +134,7 @@ public class AlgoSuggestions {
                 )
         );
         Log.logTrace("anonymous",  "Serving " + filiereSuggs.size()
-                + " formations suggestions, total "+ answer.size()
+                + " formations details, total "+ answer.size()
         );
 
         return new Suggestions(answer);
@@ -145,59 +143,106 @@ public class AlgoSuggestions {
 
 
     /**
-     * Get explanations and examples associated to a suggestion
-     * @param profile the profile
-     * @param key the key of the node
+     * Get affinities associated to a profile.
+     *
+     * @param pf  the profile
      * @param cfg the config
+     * @return the affinities
+     */
+    public static @NotNull List<Pair<String, Double>> getFormationsAffinities(@NotNull ProfileDTO pf, @NotNull Config cfg) {
+        counter.getAndIncrement();
+        //rien de spécifique --> on ne suggère rien pour éviter les trucs généralistes
+        if(containsNothingPersonal(pf)) {
+            LOGGER.info(NOTHING_PERSONAL);
+            return List.of();
+        }
+        //computing interests of all alive filieres
+        AffinityEvaluator affinityEvaluator = new AffinityEvaluator(pf, cfg);
+
+        Map<String, Double> affnites = backPsupData.filActives().stream()
+                .map(Constants::gFlCodToFrontId)
+                .collect(Collectors.toMap(
+                        fl -> flGroups.getOrDefault(fl,fl),
+                        affinityEvaluator::getAffinityEvaluation,
+                        Math::max,
+                        TreeMap::new
+                ));
+
+
+        //computing maximal score for etalonnage
+        double maxScore = affnites.values().stream().mapToDouble(Double::doubleValue).max().orElse(1.0);
+
+        if(maxScore <= NO_MATCH_SCORE) return List.of();
+
+        pf.suggRejected().forEach(suggestionDTO -> {
+            String fl = suggestionDTO.fl();
+            if(affnites.containsKey(fl)) {
+                affnites.put(fl, NO_MATCH_SCORE);
+            }
+        });
+
+        //rounding to 6 digits
+        affnites.entrySet().forEach(e -> e.setValue(max(0.0, min(1.0, Math.round( (e.getValue() / maxScore) * 10e6) / 10e6))));
+        return affnites.entrySet().stream().map(Pair::of).sorted(Comparator.comparingDouble(p -> -p.getRight())).toList();
+    }
+
+
+    /**
+     * Sort metiers by affinities
+     * @param pf the profile
+     * @param cles the keys
+     * @param cfg the config
+     * @return the sorted metiers. Best first in the list, then second best and so on...
+     */
+    public static List<String> sortMetiersByAffinites(@NotNull ProfileDTO pf, @NotNull Collection<String> cles, @NotNull Config cfg) {
+        counter.getAndIncrement();
+        //rien de spécifique --> on ne suggère rien pour éviter les trucs généralistes
+        if(containsNothingPersonal(pf)) {
+            LOGGER.info(NOTHING_PERSONAL);
+            return List.of();
+        }
+
+        Set<String> clesFiltrees = new HashSet<>(cles);
+        pf.suggRejected().stream().map(SuggestionDTO::fl).toList().forEach(clesFiltrees::remove);
+
+        return  new AffinityEvaluator(pf, cfg).getCandidatesOrderedByPertinence(clesFiltrees);
+    }
+
+
+
+
+
+    /**
+     * Get explanations and examples that explain why a list of formations is suited for a profile
+     *
+     * @param profile the profile
+     * @param keys     the keys of the formations
+     * @param cfg     the config
      * @return the explanations and examples associated to the node
      */
-    public static Pair<List<Explanation>,List<String>> getExplanationsAndExamples(
+    public static List<GetExplanationsAndExamplesServiceDTO.ExplanationAndExamples> getExplanationsAndExamples(
             @Nullable ProfileDTO profile,
-            @Nullable String key,
+            @NotNull List<String> keys,
             @NotNull Config cfg
     ) {
-        if(profile == null || key == null) {
-            return Pair.of(Collections.emptyList(), Collections.emptyList());
+        if(profile == null) {
+            return List.of();
         }
         AffinityEvaluator affinityEvaluator = new AffinityEvaluator(profile, cfg);
-        Set<String> candidates;
-        if(key.startsWith(SEC_ACT_PREFIX_IN_GRAPH)) {
-            candidates = liensSecteursMetiers.getOrDefault(key, Collections.emptySet());
-        } else  {
-            candidates = onisepData.edgesMetiersFilieres().getSuccessors(key).keySet();
-        }
-        List<String> examples = affinityEvaluator.getCandidatesOrderedByPertinence(candidates);
 
-        List<Explanation> explanations;
-        if(isFiliere(key)) {
-            Set<String> keys = ServerData.getFilieresOfGroup(key);
-            explanations =
-                    keys.stream()
-                            .map(affinityEvaluator::getExplanations)
-                            .sorted(Comparator.comparingDouble(p -> -p.getRight()))
-                            .map(Pair::getLeft)
-                            .findFirst()
-                            .orElse(List.of());
-        } else {
-            affinityEvaluator.restrictPathesToTarget(key);
-            explanations =
-                    affinityEvaluator
-                            .getCloseTagsSuggestionsOrderedByIncreasingDistance(
-                                    MAX_LENGTH_FOR_SUGGESTIONS,
-                                    true,
-                                    SEC_ACT_PREFIX_IN_GRAPH,
-                                    cfg.maxNbSuggestions()
-                            )
-                            .stream()
-                            .filter(e -> e.expl() != null)
-                            .flatMap(e -> e.expl().stream())
-                            .toList();
+        /*
+    AffinityEvaluator affinityEvaluator = new AffinityEvaluator(pf, cfg);
 
-        }
-        return Pair.of(
-                Explanation.merge(explanations),
-                examples
-        );
+
+        List<DetailedSuggestion> result = new ArrayList<>();
+
+        keys.forEach(key -> {
+            affinityEvaluator.getExplanations(key);
+
+        val expls = affinityEvaluator.getExplanationsAndExamples(key);
+     */
+        return keys.stream().map(affinityEvaluator::getExplanationsAndExamples).toList();
+
     }
 
 
@@ -221,12 +266,12 @@ public class AlgoSuggestions {
                         ).max().orElse(NO_MATCH_SCORE)
                 ));
         List<String> bestSuggestionsGrouped = new ArrayList<>(groupedIndices.keySet());
-        //les plus gros scores en premier
+        //les plus gros interests en premier
         bestSuggestionsGrouped.sort((o1, o2) ->
              (int) signum(filieresScores.get(o2) - filieresScores.get(o1))
         );
 
-        int nbSugg = Math.min(cfg.maxNbSuggestions(), bestSuggestionsGrouped.size());
+        int nbSugg = min(cfg.maxNbSuggestions(), bestSuggestionsGrouped.size());
 
         return bestSuggestionsGrouped.stream()
                         .limit(nbSugg)
@@ -237,12 +282,13 @@ public class AlgoSuggestions {
     }
 
     private static boolean containsNothingPersonal(@NotNull ProfileDTO pf) {
-        return  (pf.scores() == null || pf.scores().isEmpty())
-                && pf.suggApproved().isEmpty();
+        return  (pf.interests() == null || pf.interests().isEmpty())
+                && pf.suggApproved().isEmpty()
+                && (pf.geo_pref() == null || pf.geo_pref().isEmpty());
     }
 
     /**
-     * Preccmpute some data used to to suggestions suggestions
+     * Preccmpute some data used to to details details
      */
     public static void initialize() throws IOException {
 
@@ -251,22 +297,6 @@ public class AlgoSuggestions {
 
         LOGGER.info("Liste des types de bacs ayant au moins 3 spécialités en terminale");
         bacsWithSpecialites.addAll(ServerData.specialites.specialitesParBac().keySet());
-
-        LOGGER.info("Double indexation des villes");
-        CitiesBack cities = ServerData.cities;
-        //double indexation par nom et par zip code
-        cities.cities().forEach(c -> cityClientKeyToCities.put(c.name(), c.coords()));
-        cities.cities().forEach(c -> {
-                    if (c.coords() != null) {
-                        c.coords().forEach(cc ->
-                                cityClientKeyToCities.put(cc.zip_code(), c.coords())
-                        );
-                        c.coords().forEach(cc ->
-                                cityClientKeyToCities.put("i" + cc.insee_code(), c.coords())
-                        );
-                    }
-                }
-        );
 
         backPsupData.formations().filieres.values().forEach(filiere -> {
             String key = FILIERE_PREFIX + filiere.gFlCod;
@@ -286,80 +316,6 @@ public class AlgoSuggestions {
         relatedToHealth.addAll(lasCorrespondance.lasToGeneric().keySet());
     }
 
-    /**
-     * computes minimal distance between a city and a filiere
-     *
-     * @param node     the node, either "fl123" or "fr1223"
-     * @param cityName the city name
-     * @return the minimal distance of the city to a etablissement providing this filiere
-     */
-    public static @NotNull List<Explanation.ExplanationGeo> getDistanceKm(String node, String cityName) {
-
-        /*
-                                    distanceKm.intValue(),
-                                    cityName,
-                                    result.getRight()))
-        */
-        Paire<String, String> p = new Paire<>(node, cityName);
-
-        val l = distanceCaches.get(p);
-        if( l != null) return l;
-
-        List<Coords> cities = cityClientKeyToCities.get(cityName);
-        if (cities == null || cities.isEmpty())
-            return Collections.emptyList();
-
-        List<Formation> fors = Collections.emptyList();
-        ///attention aux groupes
-        if (node.startsWith(FILIERE_PREFIX)) {
-            fors = getFormationsFromFil(node);
-        } else if (node.startsWith((Constants.FORMATION_PREFIX))) {
-            int gTaCod = Integer.parseInt(node.substring(2));
-            Formation f = backPsupData.formations().formations.get(gTaCod);
-            if (f != null) {
-                fors = List.of(f);
-            }
-        }
-
-        List<Pair<String, Coords>> coords = fors.stream()
-                .filter(f -> f.lng != null && f.lat != null)
-                .map(f -> Pair.of(FORMATION_PREFIX + f.gTaCod, new Coords("", "", f.lat, f.lng))).toList();
-
-        if (coords.isEmpty())
-            return Collections.emptyList();
-        List<Pair<Integer, String>> results = Distance.getDistanceKm(cities, coords);
-        if(results == null)
-            return Collections.emptyList();
-        List<Explanation.ExplanationGeo> e =
-                results.stream().map(result -> new Explanation.ExplanationGeo(
-                result.getLeft(),
-                cityName,
-                result.getRight()
-                )
-                ).toList();
-        distanceCaches.put(p, e);
-        return e;
-    }
-    public static @NotNull List<Explanation.ExplanationGeo> getDistanceKm(Collection<String> node, String cityName) {
-        return
-                node.stream().flatMap(n -> getDistanceKm(n, cityName).stream())
-                        .filter(Objects::nonNull)
-                        .sorted(Comparator.comparing(Explanation.ExplanationGeo::distance))
-                        .distinct()
-                        .limit(2)
-                        .toList();
-    }
-
-
-    protected static final Map<String, List<Coords>> cityClientKeyToCities = new HashMap<>();
-
-
-    private static final int DISTANCE_CACHE_SIZE = 10000;
-    /**
-     * caches return values of getDistanceKm
-     */
-    private static final ConcurrentBoundedMapQueue<Paire<String, String>, List<Explanation.ExplanationGeo>>
-            distanceCaches = new ConcurrentBoundedMapQueue<>(DISTANCE_CACHE_SIZE);
 
     /**
      * @param bac the bac
@@ -452,7 +408,7 @@ public class AlgoSuggestions {
         LOGGER.info("Restricting graph to the prestar of recos");
         Set<String> before = new HashSet<>(edgesKeys.nodes());
         Set<String> recoNodes = edgesKeys.nodes().stream().filter(
-                ServerData::isFiliere
+                Helpers::isFiliere
         ).collect(Collectors.toSet());
         Set<String> useful = edgesKeys.preStar(recoNodes);
         edgesKeys.retainAll(useful);
@@ -499,17 +455,18 @@ public class AlgoSuggestions {
     public static Map<String,List<Path>> computePathesFrom(String n, int maxDistance) {
         //noinspection DataFlowIssue
         Pair<String, Integer> key = Pair.of(n, maxDistance);
+
         Map<String,List<Path>> result = pathsFromDistances.get(key);
         if(result != null) return result;
-        result = edgesKeys
+        @NotNull Map<String,List<Path>> result2 = edgesKeys
                         .computePathesFrom(n, maxDistance)
                         .stream()
                         .filter(p -> p.last() != null)
                         .collect(
                                 Collectors.groupingBy(Path::last)
                         );
-        pathsFromDistances.put(key, result);
-        return result;
+        pathsFromDistances.put(key, result2);
+        return result2;
     }
 
     public static boolean isRelatedToHealth(Set<String> nonZeroScores) {
@@ -523,11 +480,13 @@ public class AlgoSuggestions {
 
     public static String getStats() {
         return
-                "<br>\nsuggestions served since last boot: " + counter.get()
+                "<br>\ndetails served since last boot: " + counter.get()
                         + "<br>\nnodes in graph: " + edgesKeys.nodes().size()
                 + "<br>\nedges in graph: " + edgesKeys.size()
                 + "<br>\npathes cache size " + pathsFromDistances.size()
-                + "<br>\ndistance cache size " + distanceCaches.size();
+                + "<br>\ndistance cache size " + Distances.distanceCaches.size();
 
     }
+
+
 }
